--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
           Note Block Covers: <span style="color:#56aaff;">Aedan</span><br>
           Songs: Forsaken Sound Team, Key After Key, vladosikos17, 89M, Epic<br><br>
           Inspired by the Roblox game <b>Forsaken</b>.<br><br>
-          <span style="font-size:0.8em;opacity:0.9;">This mod and page are not affiliated with Mojang, Microsoft, Roblox Corp., or Forsaken Dev Team.<br>
-          More credits coming soon.</span>`
+          <span style="font-size:0.8em;opacity:0.9;">This mod and page are not affiliated with Mojang, Microsoft, Roblox Corp. or Forsaken Dev Team.<br>
+          </span>`
       },
       es: {
         title: "ForsakenMC - Mod para Minecraft Java",
@@ -233,7 +233,7 @@
           Canciones: Forsaken Sound Team, Key After Key, vladosikos17, 89M, Epic<br><br>
           Inspirado por el juego de Roblox <b>Forsaken</b>.<br><br>
           <span style="font-size:0.8em;opacity:0.9;">Este mod y esta página no están afiliados a Mojang, Microsoft, Roblox Corp. ni Forsaken Dev Team.<br>
-          Más créditos próximamente.</span>`
+          .</span>`
       }
     };
 
