--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         ],
         download: "Download ForsakenMC",
         supportTitle: "Support & Community",
-        support: "Questions or suggestions? Open an <a href='https://github.com/AlfonsoRV69/forsakenmc/issues' target='_blank'>issue</a> or contribute your code.<br>Thank you for supporting the mod!",
+        support: "Questions or suggestions? Open an <a href='https://github.com/AlfonsoRV69/forsakenmc/issues' target='_blank'>issue</a>.<br>Thank you for supporting the mod!",
         credits: `<b>Credits</b><br><br>
           Created using mod maker <a href="https://mcreator.net/about" target="_blank" style="color:#56aaff;">MCreator</a><br><br>
           Skins by: <span style="color:#56aaff;">LisPixel</span> <span style="font-size:0.85em;">(Except Jason, Mafioso, Guest1337 and Noob Skins)</span><br>
@@ -221,7 +221,7 @@
         ],
         download: "Descargar ForsakenMC",
         supportTitle: "Soporte y comunidad",
-        support: "¿Tienes dudas o sugerencias? Abre un <a href='https://github.com/AlfonsoRV69/forsakenmc/issues' target='_blank'>issue</a> o contribuye con tu código.<br>¡Gracias por apoyar el mod!",
+        support: "¿Tienes dudas o sugerencias? Abre un <a href='https://github.com/AlfonsoRV69/forsakenmc/issues' target='_blank'>issue</a>.<br>¡Gracias por apoyar el mod!",
         credits: `<b>Créditos</b><br><br>
           Creado usando el creador de mods <a href="https://mcreator.net/about" target="_blank" style="color:#56aaff;">MCreator</a><br><br>
           Skins por: <span style="color:#56aaff;">LisPixel</span> <span style="font-size:0.85em;">(Excepto Jason, Mafioso, Guest1337 y Noob Skins)</span><br>
