--- a/index.html
+++ b/index.html
@@ -324,13 +324,14 @@
         changelogNotFound: "No se encontró información de releases.",
         credits: `<b>Créditos</b><br><br>
           Creado usando el creador de mods <a href="https://mcreator.net/about" target="_blank" style="color:#56aaff;">MCreator</a><br><br>
-          Skins por: <span style="color:#56aaff;">LisPixel</span> <span style="font-size:0.85em;">(Excepto Jason, Mafioso, Guest1337 y Noob Skins)</span><br>
-          Skin de Jason por: <span style="color:#56aaff;">Bluudud3</span> (<a href="https://www.planetminecraft.com/skin/jason-forssken/" target="_blank" style="color:#56aaff;">link</a>)<br>
-          Skin de Mafioso por: <span style="color:#56aaff;">PHIGHTING</span> (<a href="https://www.planetminecraft.com/skin/mafioso-forsaken-dream-game/" target="_blank" style="color:#56aaff;">link</a>)<br>
+          Skins por: <span style="color:#56aaff;">LisPixel</span> <span style="font-size:0.85em;">(Excepto Slasher, Mafioso, Guest1337, Noob y Noli)</span><br>
+          Skin de Slasher por: <span style="color:#56aaff;">ruimio</span> (<a href="https://www.planetminecraft.com/skin/slasher-roblox-forsaken-wide-4px-arms/" target="_blank" style="color:#56aaff;">link</a>)<br>
+          Skin de Mafioso por: <span style="color:#56aaff;">1102xxxp</span> (<a href="https://www.planetminecraft.com/skin/mafioso-forsaken-6630689/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Skin de Guest1337 por: <span style="color:#56aaff;">ENFIN</span> (<a href="https://www.planetminecraft.com/skin/dffsds/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Skin de Noob por: ??? (<a href="https://es.namemc.com/skin/bd153c6f77d160e1" target="_blank" style="color:#56aaff;">link</a>)<br>
+          Skin de Noli por: <span style="color:#56aaff;">Drifthere</span> (<a https://www.planetminecraft.com/skin/noli-forsaken-roblox/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Note Block Covers: <span style="color:#56aaff;">Aedan</span><br>
-          Canciones: Forsaken Sound Team, Key After Key, vladosikos17, 89M, Epic<br><br>
+          Canciones: Forsaken Sound Team, Key After Key, vladosikos17, 89M, Epic, BanicAttack<br><br>
           Inspirado por el juego de Roblox <b>Forsaken</b>.<br><br>
           <span style="font-size:0.8em;opacity:0.9;">Este mod y esta página no están afiliados a Mojang, Microsoft, Roblox Corp. ni Forsaken Dev Team.<br>
           .</span>`
@@ -365,13 +366,14 @@
         changelogNotFound: "No release information found.",
         credits: `<b>Credits</b><br><br>
           Created using mod maker <a href="https://mcreator.net/about" target="_blank" style="color:#56aaff;">MCreator</a><br><br>
-          Skins by: <span style="color:#56aaff;">LisPixel</span> <span style="font-size:0.85em;">(Except Jason, Mafioso, Guest1337 and Noob Skins)</span><br>
-          Jason skin by: <span style="color:#56aaff;">Bluudud3</span> (<a href="https://www.planetminecraft.com/skin/jason-forssken/" target="_blank" style="color:#56aaff;">link</a>)<br>
-          Mafioso skin by: <span style="color:#56aaff;">PHIGHTING</span> (<a href="https://www.planetminecraft.com/skin/mafioso-forsaken-dream-game/" target="_blank" style="color:#56aaff;">link</a>)<br>
+          Skins by: <span style="color:#56aaff;">LisPixel</span> <span style="font-size:0.85em;">(Except Slasher, Mafioso, Guest1337, Noob and Noli)</span><br>
+          Slasher skin by: <span style="color:#56aaff;">ruimio</span> (<a href="https://www.planetminecraft.com/skin/slasher-roblox-forsaken-wide-4px-arms/" target="_blank" style="color:#56aaff;">link</a>)<br>
+          Mafioso skin by: <span style="color:#56aaff;">1102xxxp</span> (<a href="https://www.planetminecraft.com/skin/mafioso-forsaken-6630689/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Guest1337 skin by: <span style="color:#56aaff;">ENFIN</span> (<a href="https://www.planetminecraft.com/skin/dffsds/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Noob skin by: ??? (<a href="https://es.namemc.com/skin/bd153c6f77d160e1" target="_blank" style="color:#56aaff;">link</a>)<br>
+          Noli skin by: <span style="color:#56aaff;">Drifthere</span> (<a https://www.planetminecraft.com/skin/noli-forsaken-roblox/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Note Block Covers: <span style="color:#56aaff;">Aedan</span><br>
-          Songs: Forsaken Sound Team, Key After Key, vladosikos17, 89M, Epic<br><br>
+          Songs: Forsaken Sound Team, Key After Key, vladosikos17, 89M, Epic, BanicAttack<br><br>
           Inspired by the Roblox game <b>Forsaken</b>.<br><br>
           <span style="font-size:0.8em;opacity:0.9;">This mod and page are not affiliated with Mojang, Microsoft, Roblox Corp. or Forsaken Dev Team.<br>
           </span>`
