--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           Skin de Mafioso por: <span style="color:#56aaff;">1102xxxp</span> (<a href="https://www.planetminecraft.com/skin/mafioso-forsaken-6630689/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Skin de Guest1337 por: <span style="color:#56aaff;">ENFIN</span> (<a href="https://www.planetminecraft.com/skin/dffsds/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Skin de Noob por: ??? (<a href="https://es.namemc.com/skin/bd153c6f77d160e1" target="_blank" style="color:#56aaff;">link</a>)<br>
-          Skin de Noli por: <span style="color:#56aaff;">Drifthere</span> (<a https://www.planetminecraft.com/skin/noli-forsaken-roblox/" target="_blank" style="color:#56aaff;">link</a>)<br>
+          Skin de Noli por: <span style="color:#56aaff;">Drifthere</span> (<a href="https://www.planetminecraft.com/skin/noli-forsaken-roblox/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Note Block Covers: <span style="color:#56aaff;">Aedan</span><br>
           Canciones: Forsaken Sound Team, Key After Key, vladosikos17, 89M, Epic, BanicAttack<br><br>
           Inspirado por el juego de Roblox <b>Forsaken</b>.<br><br>
@@ -371,7 +371,7 @@
           Mafioso skin by: <span style="color:#56aaff;">1102xxxp</span> (<a href="https://www.planetminecraft.com/skin/mafioso-forsaken-6630689/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Guest1337 skin by: <span style="color:#56aaff;">ENFIN</span> (<a href="https://www.planetminecraft.com/skin/dffsds/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Noob skin by: ??? (<a href="https://es.namemc.com/skin/bd153c6f77d160e1" target="_blank" style="color:#56aaff;">link</a>)<br>
-          Noli skin by: <span style="color:#56aaff;">Drifthere</span> (<a https://www.planetminecraft.com/skin/noli-forsaken-roblox/" target="_blank" style="color:#56aaff;">link</a>)<br>
+          Noli skin by: <span style="color:#56aaff;">Drifthere</span> (<a href="https://www.planetminecraft.com/skin/noli-forsaken-roblox/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Note Block Covers: <span style="color:#56aaff;">Aedan</span><br>
           Songs: Forsaken Sound Team, Key After Key, vladosikos17, 89M, Epic, BanicAttack<br><br>
           Inspired by the Roblox game <b>Forsaken</b>.<br><br>
