--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
       min-height: 100vh;
       background:
-        linear-gradient(to bottom, #35713e 0%, #b62e2e 50%, #191a1b 100%) fixed;
+        linear-gradient(to bottom, #663091 0%, #b62e2e 50%, #191a1b 100%) fixed;
       color: #dad793;
       font-family: 'Press Start 2P', monospace;
       margin: 0;
@@ -83,9 +83,9 @@
       height: 128px;
       border-radius: 25px;
       box-shadow: 0 0 24px #222, 0 0 6px #fff3;
-      background: #203c10;
+      background: #7303fc;
       object-fit: contain;
-      border: 4px solid #3eff36;
+      border: 4px solid #250261;
       transition: transform 0.2s;
     }
     .logo-fmcpfp:hover {
@@ -518,7 +518,7 @@
       <button id="lang-es" class="lang-btn active">Español</button>
       <button id="lang-en" class="lang-btn">English</button>
     </div>
-    <img src="fmcpfp.png" class="logo-fmcpfp" alt="ForsakenMC Logo">
+    <img src="forsakenmclogo.png" class="logo-fmcpfp" alt="ForsakenMC Logo">
     <h1 id="mainTitle">ForsakenMC</h1>
     <p id="subtitle">
       ForsakenMC es un mod para <span style="color:#6dca45;">Minecraft Java Edition</span> para <b>NeoForge 1.21.1</b> que trae contenido del popular juego de Roblox <b>Forsaken</b> a Minecraft. ¡Vive nuevas aventuras y desafíos inspirados en Forsaken!
