--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
     .logo-fmcpfp {
       display: block;
       margin: 0 auto 24px auto;
-      width: 128px;
+      width: 384px;
       height: 128px;
       border-radius: 25px;
-      box-shadow: 0 0 24px #222, 0 0 6px #fff3;
-      background: #7303fc;
+      box-shadow: 0 0 24px 0, 0 0 6px 0;
+      background: 0;
       object-fit: contain;
-      border: 4px solid #250261;
+      border: 4px solid 0;
       transition: transform 0.2s;
     }
     .logo-fmcpfp:hover {
