--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
           Slasher skin by: <span style="color:#56aaff;">ruimio</span> (<a href="https://www.planetminecraft.com/skin/slasher-roblox-forsaken-wide-4px-arms/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Mafioso skin by: <span style="color:#56aaff;">1102xxxp</span> (<a href="https://www.planetminecraft.com/skin/mafioso-forsaken-6630689/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Guest1337 skin by: <span style="color:#56aaff;">ENFIN</span> (<a href="https://www.planetminecraft.com/skin/dffsds/" target="_blank" style="color:#56aaff;">link</a>)<br>
-          Noob skin by: ??? (<a href="https://es.namemc.com/skin/bd153c6f77d160e1" target="_blank" style="color:#56aaff;">link</a>)<br>
+          Noob skin by: ??? (<a href="https://namemc.com/skin/bd153c6f77d160e1" target="_blank" style="color:#56aaff;">link</a>)<br>
           Noli skin by: <span style="color:#56aaff;">Drifthere</span> (<a href="https://www.planetminecraft.com/skin/noli-forsaken-roblox/" target="_blank" style="color:#56aaff;">link</a>)<br>
           Note Block Covers: <span style="color:#56aaff;">Aedan</span><br>
           Songs: Forsaken Sound Team, Key After Key, vladosikos17, 89M, Epic, BanicAttack<br><br>
@@ -475,7 +475,7 @@
     }
 
     window.onload = function() {
-      setLang('es');
+      setLang('en');
       document.getElementById('lang-en').onclick = () => setLang('en');
       document.getElementById('lang-es').onclick = () => setLang('es');
 
@@ -504,7 +504,7 @@
       document.getElementById('closeFullImg').onclick = closeFullImg;
 
       // Changelog inicial (ya se llama en setLang, pero por si recargas el idioma)
-      fetchLatestRelease('es');
+      fetchLatestRelease('en');
     };
   </script>
 </head>
