--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
       margin: 0 auto 24px auto;
       width: 384px;
       height: 128px;
+      object-fit: contain;
+      border: 4px solid 0;
+      transition: transform 0.2s;
     }
     .logo-fmcpfp:hover {
       transform: scale(1.06) rotate(-2deg);
