--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     const content = {
       es: {
         title: "ForsakenMC - Mod para Minecraft Java",
-        mainTitle: "ForsakenMC",
+        mainTitle: "",
         subtitle: "ForsakenMC es un mod para <span style='color:#6dca45;'>Minecraft Java Edition</span> para <b>NeoForge 1.21.1</b> que trae contenido del popular juego de Roblox <b>Forsaken</b> a Minecraft. ¡Vive nuevas aventuras y desafíos inspirados en Forsaken!",
         featuresTitle: "Características principales",
         features: [
@@ -334,7 +334,7 @@
       },
       en: {
         title: "ForsakenMC - Minecraft Java Mod",
-        mainTitle: "ForsakenMC",
+        mainTitle: "",
         subtitle: "ForsakenMC is a mod for <span style='color:#6dca45;'>Minecraft Java Edition</span> for <b>NeoForge 1.21.1</b> that brings content from the popular Roblox game <b>Forsaken</b> into Minecraft! Experience new adventures and challenges inspired by Forsaken’s world.",
         featuresTitle: "Main Features",
         features: [
